[workspace]

members = [
    "two-sum",
    "add-two-numbers",
    "longest-substring-without-repeating-characters",
    "uncommon-words-from-two-sentences",
    "palindrome-number",
    "longest-palindromic-substring",
    "median-of-two-sorted-arrays",
    "number-of-steps-to-reduce-a-number-to-zero",
    "longest-nice-substring",
    "reverse-integer",
    "string-to-integer-atoi",
    "integer-to-roman",
    "roman-to-integer",
]
